--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -240,7 +240,7 @@ header .container-nav {
 }
 @media (min-width: 700px) {
   #listing .listing-info .card-auction, #watchlist .listing-info .card-auction, #category .listing-info .card-auction, #winner .listing-info .card-auction {
-    padding: 10rem 1rem 2rem;
+    padding: 10rem 5rem 2rem;
   }
 }
 @media (min-width: 370px) {
@@ -248,9 +248,18 @@ header .container-nav {
     padding: 7rem 1rem 2rem;
   }
 }
+#listing .listing-info .card-auction h2, #watchlist .listing-info .card-auction h2, #category .listing-info .card-auction h2, #winner .listing-info .card-auction h2 {
+  color: var(--text-color-dark);
+  font-size: 2rem;
+  font-weight: 700;
+  padding-top: 1rem;
+}
+#listing .listing-info .card-auction p, #watchlist .listing-info .card-auction p, #category .listing-info .card-auction p, #winner .listing-info .card-auction p {
+  color: var(--text-color-dark);
+}
 #listing .listing-info .card-auction .watch-on a, #watchlist .listing-info .card-auction .watch-on a, #category .listing-info .card-auction .watch-on a, #winner .listing-info .card-auction .watch-on a {
   text-decoration: none;
-  color: var(--color-secondary);
+  color: var(--shadow-1);
   font-weight: 600;
   font-size: 0.96rem;
 }
@@ -263,7 +272,7 @@ header .container-nav {
   margin-top: 2rem;
   padding: 2rem;
   background: var(--color-secondary);
-  color: var(--teal);
+  color: var(--bs-teal);
   border-radius: 0.5rem;
 }
 #listing .listing-info .bids .bids-title, #listing .listing-info .bids .comments-title, #listing .listing-info .bids .winner-title, #listing .listing-info .comments .bids-title, #listing .listing-info .comments .comments-title, #listing .listing-info .comments .winner-title, #watchlist .listing-info .bids .bids-title, #watchlist .listing-info .bids .comments-title, #watchlist .listing-info .bids .winner-title, #watchlist .listing-info .comments .bids-title, #watchlist .listing-info .comments .comments-title, #watchlist .listing-info .comments .winner-title, #category .listing-info .bids .bids-title, #category .listing-info .bids .comments-title, #category .listing-info .bids .winner-title, #category .listing-info .comments .bids-title, #category .listing-info .comments .comments-title, #category .listing-info .comments .winner-title, #winner .listing-info .bids .bids-title, #winner .listing-info .bids .comments-title, #winner .listing-info .bids .winner-title, #winner .listing-info .comments .bids-title, #winner .listing-info .comments .comments-title, #winner .listing-info .comments .winner-title {
@@ -376,13 +385,18 @@ header .container-nav {
   display: block;
   width: 100%;
   height: auto;
+  overflow: hidden;
 }
 #listing .listing-info .listing-price > p, #watchlist .listing-info .listing-price > p, #category .listing-info .listing-price > p, #winner .listing-info .listing-price > p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
   line-height: 1.5rem;
-  color: rgba(223, 223, 223, 0.8745098039);
-  text-shadow: 0 2px 6px var(--color-quinary);
+}
+#listing .listing-info .listing-price > strong, #watchlist .listing-info .listing-price > strong, #category .listing-info .listing-price > strong, #winner .listing-info .listing-price > strong {
+  font-size: 1.6rem;
+}
+#listing .listing-info .listing-price > strong > span, #watchlist .listing-info .listing-price > strong > span, #category .listing-info .listing-price > strong > span, #winner .listing-info .listing-price > strong > span {
+  padding-right: 5px;
 }
 #listing .listing-info .close-auction, #watchlist .listing-info .close-auction, #category .listing-info .close-auction, #winner .listing-info .close-auction {
   display: block;
